# wal-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: wal.rs
src/: config.rs  lib.rs
src/fileext/: allocate.rs  fileext.rs  fileext_unix.rs  fileext_win.rs  mod.rs
src/segment/: mod.rs  overhead.rs  segment.rs
src/wal/: cursor.rs  mod.rs  wal.rs
